corrected overflow for quote-panel to keep the arrow visible

--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -48,7 +48,6 @@
 @mixin quote_customer($customer_picture, $customer_container) {
   // quote panel with shadow
   .quote-panel {
-    overflow: hidden;
     width: 100%;
     min-height: $customer_picture + $customer_name + 80px;
     float: right;
@@ -66,8 +65,6 @@
     }
     // right 0 and make a border top insteab
   }
-
-
 
   // arrow associated
   // arrow needs to be a div directly after the quote panel
@@ -110,6 +107,8 @@
     display: inline-block;
     padding-top: 0px;
     padding-bottom: 40px;
+    width: 100%;
+    overflow-x: scroll;
   }
 
   .quote-panel .panel-footer {
